# zedis

./: Cargo.toml  README.md
locales/: en.toml  zh.toml
src/: assets.rs  main.rs  states.rs  views.rs
src/components/: kv_delegate.rs
src/connection/: config.rs  manager.rs
src/helpers/: action.rs  fs.rs  string.rs
src/states/: app.rs  i18n.rs  server.rs
src/states/server/: key.rs  list.rs  set.rs  value.rs
src/views/: bytes_editor.rs  content.rs  editor.rs  key_tree.rs  kv_table.rs  list_editor.rs  servers.rs  set_editor.rs  sidebar.rs  status_bar.rs  string_editor.rs
