[package]
name = "zedis"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.100"
chrono = "0.4.42"
dashmap = "6.1.0"
gpui = "0.2.2"
gpui-component = "0.4.0"
gpui-component-assets = "0.4.0"
gpui-macros = "0.2.2"
home = "0.5.12"
humansize = "2.1.3"
humantime = "2.3.0"
lsp-types = "0.97.0"
pretty-hex = "0.4.1"
redis = { version = "1.0.0-rc.3", features = ["cluster"] }
rust-embed = "8.9.0"
serde = "1.0.228"
serde_json = "1.0.145"
snafu = "0.8.9"
substring = "1.4.5"
time = "0.3.44"
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["local-time"] }


[lints.clippy]
# Set the unwrap_used lint level to deny
unwrap_used = "deny"

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"
